--- a/package.json
+++ b/package.json
@@ -21,28 +21,26 @@
     "pinia": "^2.1.7",
     "typed.js": "^2.1.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vue-typed-js": "^0.1.2"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.28",
+    "@rushstack/eslint-patch": "^1.8.0",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.4.1",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
     "typescript": "~5.4.0",
-    "vite": "^5.1.6",
-    "vite-plugin-vue-devtools": "^7.0.18",
-    "vue-tsc": "^2.0.6"
+    "vite": "^5.2.8",
+    "vue-tsc": "^2.0.11"
   }
 }
